# avito-monitoring-ads

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  init-mongo.js  pyproject.toml
app/: config.py  main.py
app/api/: handlers.py
app/api/actions/: counters.py  queries.py
app/db/: database.py  models.py
app/scrapers/: avito_avs_scraper.py
core/: config.py  database.py  exceptions.py  main.py  models.py
scrapers/: avito_avs_scraper.py
